-
Bug
-
Resolution: Done
-
P2: Important
-
Qt Creator 4.3.0
-
None
-
Linux, gcc
-
98346aaab1b4016a1e44aef715761552a3b80775 (qt-creator/qt-creator/master)
The gcc compiler outputs error messages like:
../SpeedTest/main.cpp:57:48: error: no matching function for call to 'QVector<NoPimpl>::insert(int&, SimplePimpl)' vecNP.insert(foundId, SimplePimpl(val,0.)); ^
using ASCII art for the '^' position taking monospaced font into account.
A shortcut to see the error output of the compiler is to hover the mouse pointer over the "red exclamation mark". This pops up a tooltip showing the error text of the compiler.
However, this tooltip text is rendered with proportional font, destroying the ASCII art of the text: the '^' indicator points to the wrong place ....
Using the same font as in the output panel should solve the issue.
- resulted in
-
QTCREATORBUG-23927 Different fonts used in annotation
-
- Closed
-
For Gerrit Dashboard: QTCREATORBUG-18264 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
268292,1 | WIP: Use configured font for marker tool tips | master | qt-creator/qt-creator | Status: ABANDONED | -2 | 0 |
268293,5 | ProjectExplorer: Use monospace font in task tool tips for compile issues | master | qt-creator/qt-creator | Status: MERGED | +2 | 0 |