ProjectExplorer: Use monospace font in task tool tips for compile issues

Otherwise, error message alignment can get messed up, as the default
tool tip font is typically not proportional.

Fixes: QTCREATORBUG-18264
Change-Id: I7c827d859720c4d3a89726000f00930219c68351
Reviewed-by: hjk <hjk@qt.io>